# informatique

./: .gitignore  .zeitgit-context  CLAUDE.md  chasseaux tresor.ods  extraits_cycle3.md  generer_chasse.py  generer_kahoot_template.py  labyrinthe_mult.py  programme.md  pyproject.toml
.claude/skills/niove/: niove.md
.github/workflows/: deploy.yml
site/: docusaurus.config.js  package-lock.json  package.json  sidebars.js
site/blog/: 2026-03-12-audierne2026.md  2026-03-12-bienvenue.md  authors.yml
site/docs/activites/: chasse-au-tresor.md  kahoot.md  labyrinthe-multiplications.md  tp1-scratch-noel.md  tp2-animaux.md  tp2-cm1.md  tp2-cm2.md  tp2-ecologie-ecole.md  tp2-ecologie.md  tp2-gaspillage.md  tp2-journal-environnement.md  tp2-pollution-air.md  tp2-pollution-nature.md  tp3-podcast-aventure.md
site/docs/programme/: competences-base.md  evaluation.md  progression.md
site/docs/ressources/: outils.md  programme-officiel.md
site/src/css/: custom.css
site/src/pages/: index.js  index.module.css
